# rr-pacman

./: CMakeLists.txt
lib/libalpm/: diskspace.h  util.c
scripts/: makepkg.sh.in
src/pacman/: pacman.c
